--- a/kubernetes/infrastructure/vpn/app/secret.yaml
+++ b/kubernetes/infrastructure/vpn/app/secret.yaml
@@ -3,7 +3,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: vpn
-  namespace: downloads-vpn
+  namespace: vpn
 spec:
   refreshInterval: 24h
   secretStoreRef:
