--- a/kubernetes/monitor/otel/app/helm-release.yaml
+++ b/kubernetes/monitor/otel/app/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
       containers:
         enabled: true
         excludePaths:
-          - "/var/log/pods/downloads-vpn_vpn-pod-gateway*/*/*.log" # longhorn and vpn generate too many events to make them useful
+          - "/var/log/pods/vpn_vpn-*/*/*.log" # longhorn and vpn generate too many events to make them useful
           - "/var/log/pods/kube-system_snapshot-controller*/*/*.log"
           - "/var/log/pods/longhorn-system_longhorn-manager*/*/*.log"
           - "/var/log/pods/metallb-system_speaker-*/speaker/*.log"
