--- a/kubernetes/infrastructure/longhorn/config/longhorn-snapshot.yaml
+++ b/kubernetes/infrastructure/longhorn/config/longhorn-snapshot.yaml
@@ -1,5 +1,5 @@
-# yaml-language-server: $schema=../../../../schemas/recurringjob_v1beta1.json
-apiVersion: longhorn.io/v1beta1 # as of 5/9/22 this is correct version
+# yaml-language-server: $schema=../../../../schemas/recurringjob_v1beta2.json
+apiVersion: longhorn.io/v1beta2
 kind: RecurringJob
 metadata:
   name: daily-1am
