--- a/kubernetes/monitor/splunk-syslog/app/syslog-install.yaml
+++ b/kubernetes/monitor/splunk-syslog/app/syslog-install.yaml
@@ -3,44 +3,36 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: splunk-connect-for-syslog
+  name: syslog
   namespace: monitor
   labels:
-    helm.sh/chart: splunk-connect-for-syslog-2.49.3
+    helm.sh/chart: splunk-connect-for-syslog-3.1.5
     app.kubernetes.io/name: splunk-connect-for-syslog
     app.kubernetes.io/instance: release-name
-    app.kubernetes.io/version: "2.49.3"
+    app.kubernetes.io/version: "3.1.5"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "input"
     app.kubernetes.io/part-of: "Splunk"
 ---
-# Source: splunk-connect-for-syslog/templates/secret.yaml
-#apiVersion: v1
-#kind: Secret
-#metadata:
-#  name: splunk-connection
-#data:
-#  hec_token: YmFuYW5h
-#---
 # Source: splunk-connect-for-syslog/templates/config-configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: splunk-connect-for-syslog-config
+  name: syslog-config
   namespace: monitor
   labels:
-    helm.sh/chart: splunk-connect-for-syslog-2.49.3
+    helm.sh/chart: splunk-connect-for-syslog-3.1.5
     app.kubernetes.io/name: splunk-connect-for-syslog
     app.kubernetes.io/instance: release-name
-    app.kubernetes.io/version: "2.49.3"
+    app.kubernetes.io/version: "3.1.5"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "input"
     app.kubernetes.io/part-of: "Splunk"
 data:
-  app-vps-mikrotik_routeros.conf: |-
-    #/etc/syslog-ng/conf.d/configmap/config/app_parsers/app-vps-mikrotik_routeros.conf
+  app-mikrotik_routeros.conf: |-
+    #/opt/sc4s/local/config/app-parsers/app-vps-mikrotik_routeros.conf
 
-    application app-vps-mikrotik_routeros[sc4s-vps] {
+    application app-vps-test-mikrotik_routeros[sc4s-vps] {
       filter {
               host("steffy" type(string) flags(prefix))
           };
@@ -56,19 +48,20 @@ data:
 apiVersion: v1
 kind: Service
 metadata:
-  name: splunk-connect-for-syslog-tcp
+  name: syslog-tcp
   namespace: monitor
   annotations:
-    metallb.universe.tf/allow-shared-ip: splunk-syslog
+    metallb.universe.tf/allow-shared-ip: "splunk-connect"
     metallb.universe.tf/loadBalancerIPs: ${SYSLOG_IP}
   labels:
-    helm.sh/chart: splunk-connect-for-syslog-2.49.3
+    helm.sh/chart: splunk-connect-for-syslog-3.1.5
     app.kubernetes.io/name: splunk-connect-for-syslog
     app.kubernetes.io/instance: release-name
-    app.kubernetes.io/version: "2.49.3"
+    app.kubernetes.io/version: "3.1.5"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "input"
     app.kubernetes.io/part-of: "Splunk"
+
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
@@ -97,16 +90,16 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: splunk-connect-for-syslog-udp
+  name: syslog-udp
   namespace: monitor
   annotations:
-    metallb.universe.tf/allow-shared-ip: splunk-syslog
+    metallb.universe.tf/allow-shared-ip: "splunk-connect"
     metallb.universe.tf/loadBalancerIPs: ${SYSLOG_IP}
   labels:
-    helm.sh/chart: splunk-connect-for-syslog-2.49.3
+    helm.sh/chart: splunk-connect-for-syslog-3.1.5
     app.kubernetes.io/name: splunk-connect-for-syslog
     app.kubernetes.io/instance: release-name
-    app.kubernetes.io/version: "2.49.3"
+    app.kubernetes.io/version: "3.1.5"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "input"
     app.kubernetes.io/part-of: "Splunk"
@@ -130,22 +123,22 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: splunk-connect-for-syslog
+  name: syslog
   namespace: monitor
   annotations:
     checkov.io/skip1: CKV_K8S_22=Use read-only filesystem for containers where possible - this will break container
     checkov.io/skip2: CKV_K8S_35=Prefer using secrets as files over secrets as environment variables
     checkov.io/skip3: CKV_K8S_38=Ensure that Service Account Tokens are only mounted where necessary
   labels:
-    helm.sh/chart: splunk-connect-for-syslog-2.49.3
+    helm.sh/chart: splunk-connect-for-syslog-3.1.5
     app.kubernetes.io/name: splunk-connect-for-syslog
     app.kubernetes.io/instance: release-name
-    app.kubernetes.io/version: "2.49.3"
+    app.kubernetes.io/version: "3.1.5"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "input"
     app.kubernetes.io/part-of: "Splunk"
 spec:
-  serviceName: splunk-connect-for-syslog
+  serviceName: syslog
   replicas: 1
   selector:
     matchLabels:
@@ -157,42 +150,41 @@ spec:
         app.kubernetes.io/name: splunk-connect-for-syslog
         app.kubernetes.io/instance: release-name
     spec:
-      serviceAccountName: splunk-connect-for-syslog
+      serviceAccountName: syslog
       securityContext:
         seccompProfile:
           type: RuntimeDefault
-      volumes:
-        - name: syslog-ng-var
-          emptyDir:
-            medium: Memory
-            sizeLimit: 64Mi
-        - name: config
-          configMap:
-            name: splunk-connect-for-syslog-config
       containers:
         - name: splunk-connect-for-syslog
-          image: ghcr.io/splunk/splunk-connect-for-syslog/container2:2.49.3
+          securityContext:
+            capabilities:
+              drop:
+              - ALL
+          image: "ghcr.io/splunk/splunk-connect-for-syslog/container2:2.49.3"
           imagePullPolicy: IfNotPresent
           env:
-            - name: SC4S_SNMP_TRAP_COLLECT
-              value: "no"
-            - name: SC4S_RUNTIME_ENV
-              value: "k8s"
-            - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_URL
-              value: "https://splunk-hec.${DOMAIN_NAME}/services/collector/event"
-            - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_TOKEN
-              valueFrom:
-                secretKeyRef:
-                  key: hec_token
-                  name: splunk-monitor-secret
-            - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_TLS_VERIFY
-              value: "no"
-            - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_DISKBUFF_ENABLE
-              value: "yes"
-            - name: SC4S_SOURCE_TLS_ENABLE
-              value: "no"
-            #- name: SC4S_SOURCE_STORE_RAWMSG
-            #  value: "yes"
+          - name: SC4S_SNMP_TRAP_COLLECT
+            value: "no"
+          - name: SC4S_CONTAINER_HOST
+            valueFrom:
+              fieldRef:
+                fieldPath: spec.nodeName
+          - name: SC4S_RUNTIME_ENV
+            value: "k8s"
+          - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_URL
+            value: "https://splunk-hec.${DOMAIN_NAME}/services/collector/event"
+          - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_TOKEN
+            valueFrom:
+              secretKeyRef:
+                key: hec_token
+                name: splunk-monitor-secret
+          - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_TLS_VERIFY
+            value: "no"
+          - name: SC4S_DEST_SPLUNK_HEC_DEFAULT_DISKBUFF_ENABLE
+            value: "no"
+          - name: SC4S_SOURCE_TLS_ENABLE
+            value: "no"
+
           ports:
             - name: bsd-dflt-tcp
               containerPort: 514
@@ -216,11 +208,9 @@ spec:
               containerPort: 8080
               protocol: TCP
           volumeMounts:
-            - name: syslog-ng-var
-              mountPath: /var/lib/syslog-ng
-            - name: config
-              mountPath: /etc/syslog-ng/conf.d/configmap/config/app_parsers
-              readOnly: true
+          - name: config
+            mountPath: /etc/syslog-ng/conf.d/configmap/config/app_parsers
+            readOnly: true
           livenessProbe:
             httpGet:
               path: /healthz
@@ -236,8 +226,25 @@ spec:
             failureThreshold: 60
             periodSeconds: 10
             timeoutSeconds: 5
-          securityContext:
-          # don't set ROFS, prevent perm elevations - this will break container
-            capabilities:
-              drop:
-                - ALL
+          resources:
+            {}
+      volumes:
+        - name: config
+          configMap:
+            name: syslog-config
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app.kubernetes.io/instance
+                  operator: In
+                  values:
+                  - release-name
+                - key: app.kubernetes.io/name
+                  operator: In
+                  values:
+                  - splunk-connect-for-syslog
+              topologyKey: "kubernetes.io/hostname"
