--- a/kubernetes/infrastructure/longhorn/config/secret.yaml
+++ b/kubernetes/infrastructure/longhorn/config/secret.yaml
@@ -22,3 +22,25 @@ spec:
     - secretKey: AWS_ENDPOINTS
       remoteRef:
         key: aws-endpoints
+---
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: azure-longhorn-backup-secret
+  namespace: longhorn-system
+spec:
+  refreshInterval: 24h
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: azure-keyvault
+  target:
+    name: azure-longhorn-backup-secret
+    creationPolicy: Owner
+  data:
+    - secretKey: AZBLOB_ACCOUNT_NAME
+      remoteRef:
+        key: longhorn-blob-storage-account
+    - secretKey: AZBLOB_ACCOUNT_KEY # account secret key
+      remoteRef:
+        key: longhorn-blob-account-key
