--- a/.checkov.yaml
+++ b/.checkov.yaml
@@ -2,6 +2,7 @@ compact: true
 output: cli
 quiet: true
 skip-check:
+  - CKV2_ANSIBLE_3 # Ensure block is handling task errors properly
   - CKV_K8S_8 # Liveness Probe should be configured
   - CKV_K8S_9 # Readiness probe should be configured
   - CKV_K8S_10 # CPU requests should be set
@@ -12,6 +13,6 @@ skip-check:
   - CKV_K8S_40 # Containers should run as a high UID to avoid host conflict
   - CKV_K8S_43 # Image should use digest
 skip-path:
-  - kubernetes/clusters/develop/flux-system
-  - kubernetes/clusters/production/flux-system
+  - kubernetes/clusters
   - kubernetes/infrastructure/longhorn/snapshot-controller
+  - kubernetes/monitor/splunk-syslog/app
