--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -10,8 +10,11 @@ ansible-k3s-dev: ansible-requirements
 ansible-k3s-prod: ansible-requirements
 	. ../.venv/bin/activate; ansible-playbook -i ./inventory/inventory-prod.yml k3scluster.yml --ask-pass --ask-become-pass
 
+# OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES is needed when running on macos
+# https://stackoverflow.com/questions/50168647/multiprocessing-causes-python-to-crash-and-gives-an-error-may-have-been-in-progr
+
 ansible-flux-dev: ansible-requirements
-	. ../.venv/bin/activate; ansible-playbook -i ./inventory/inventory-develop.yml localhost.yml --ask-become-pass
+	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory-develop.yml localhost.yml --ask-become-pass
 
 ansible-flux-prod: ansible-requirements
-	. ../.venv/bin/activate; ansible-playbook -i ./inventory/inventory-prod.yml localhost.yml --ask-become-pass
+	. ../.venv/bin/activate; export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES; ansible-playbook -i ./inventory/inventory-prod.yml localhost.yml --ask-become-pass
