--- a/ansible/roles/k3s/tasks/main.yml
+++ b/ansible/roles/k3s/tasks/main.yml
@@ -10,3 +10,9 @@
   when:
     - k3s_control_node is defined
     - k3s_control_node
+
+# Taken from https://github.com/onedr0p/home-ops/blob/main/ansible/kubernetes/playbooks/cluster-installation.yaml
+- name: Create service to cleanup stale containers
+  ansible.builtin.include_tasks: stale_containers.yml
+  vars:
+    stale_containers_state: enabled
