feat(ansible): manage journalctl size
Also ensure handlers are completed before k3s install commences

--- a/ansible/roles/k3s/handlers/main.yml
+++ b/ansible/roles/k3s/handlers/main.yml
@@ -6,3 +6,9 @@
     daemon_reload: true
     enabled: true
     state: restarted
+
+- name: Restart journalctl
+  become: true
+  ansible.builtin.systemd:
+    name: systemd-journald.service
+    state: restarted
