--- a/kubernetes/monitor/otel/app/helm-release.yaml
+++ b/kubernetes/monitor/otel/app/helm-release.yaml
@@ -45,6 +45,12 @@ spec:
             priority: info
           - name: stale-containers
             priority: info
+          - name: python3
+            priority: info
+          - name: sshd
+            priority: info
+          - name: sudo
+            priority: info
         directory: /var/log/journal
         index: k8s_events
 
