--- a/kubernetes/monitor/prometheus/app/helm-release.yaml
+++ b/kubernetes/monitor/prometheus/app/helm-release.yaml
@@ -30,6 +30,10 @@ spec:
     crds:
       enabled: false # crds are installed as part of ansible base deployment
 
+    defaultRules:
+      rules:
+        etcd: false
+
     fullnameOverride: prometheus
 
     grafana:
@@ -145,8 +149,8 @@ spec:
             regex: "(apiserver_audit|apiserver_client|apiserver_delegated|apiserver_envelope|apiserver_storage|apiserver_webhooks|attachdetach_controller|authenticated_user|authentication|cronjob_controller|disabled_metric|endpoint_slice|ephemeral_volume|garbagecollector_controller|get_token|go|hidden_metric|job_controller|kubernetes_build|kubernetes_feature|leader_election|node_collector|node_ipam|process_cpu|process_max|process_open|process_resident|process_start|process_virtual|pv_collector|registered_metric|replicaset_controller|rest_client|retroactive_storageclass|root_ca|running_managed|scrape_duration|scrape_samples|scrape_series|service_controller|storage_count|storage_operation|ttl_after|volume_operation|workqueue)_(.+)"
             action: keep
 
-    kubeEtcd:
-      enabled: true
+    kubeEtcd: # by default k3s using sqlite. etcd really requires proper HA setup of server nodes
+      enabled: false
 
     kubeProxy:
       enabled: true
