--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -7,6 +7,9 @@ roles:
     version: v1.0.11
 
 collections:
+  - name: community.general # needed for macos homebrew management
+    version: 7.3.0
+    source: https://galaxy.ansible.com
   - name: ansible.posix
     version: 1.5.4
     source: https://galaxy.ansible.com
