--- a/ansible/roles/flux/vars/main.yml
+++ b/ansible/roles/flux/vars/main.yml
@@ -4,9 +4,9 @@
 # flux creds
 github_token: "{{ lookup('azure_keyvault_secret', 'github-token', vault_url=kv_url) }}"
 
-# flux setup
+# flux setup - app_arch & app_os tweaks make nicholaswilde.flux2 role compatibile with MacOS. Don't mess with these values
 app_arch: "{{ 'amd64' if ansible_facts['architecture'] == 'x86_64' else 'arm64' }}"
-app_platform: "{{ ansible_facts['system'] | lower }}" # either darwin or linux
+app_os: "{{ ansible_facts['system'] | lower }}"
 app_ver: "{{ flux_version }}"
 
 # flux deploy
