--- a/kubernetes/infrastructure/longhorn/ks.yaml
+++ b/kubernetes/infrastructure/longhorn/ks.yaml
@@ -1,6 +1,6 @@
 ---
-# yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: infrastructure-longhorn-crd
@@ -15,8 +15,8 @@ spec:
   timeout: 5m0s
   wait: true
 ---
-# yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: infrastructure-longhorn-snapshot-controller
@@ -33,8 +33,8 @@ spec:
   timeout: 5m0s
   wait: true
 ---
-# yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: infrastructure-longhorn-config
