--- a/kubernetes/infrastructure/secrets/ks.yaml
+++ b/kubernetes/infrastructure/secrets/ks.yaml
@@ -1,6 +1,6 @@
 ---
-# yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: infrastructure-external-secrets # install crds
@@ -18,8 +18,8 @@ spec:
   timeout: 5m0s
   wait: true
 ---
-# yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: infrastructure-external-secrets-stores
