--- a/kubernetes/monitor/splunk/ks.yaml
+++ b/kubernetes/monitor/splunk/ks.yaml
@@ -1,6 +1,6 @@
 ---
-# yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: monitor-splunk-app
@@ -26,8 +26,8 @@ spec:
   timeout: 5m0s
   wait: true
 ---
-# yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: monitor-splunk-operator
