--- a/kubernetes/apps/home-automation/ser2sock/kustomization.yaml
+++ b/kubernetes/apps/home-automation/ser2sock/kustomization.yaml
@@ -2,11 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - media-network-policy.yaml
-  - bazarr
-  - jellyfin
-  - mylar3
-  - openbooks
-  - prowlarr
-  - radarr
-  - sonarr
+  - ser2sock.yaml
