--- a/kubernetes/infrastructure/secrets/ks.yaml
+++ b/kubernetes/infrastructure/secrets/ks.yaml
@@ -28,6 +28,9 @@ spec:
   dependsOn:
     - name: cluster-settings
     - name: infrastructure-external-secrets # needs crds to be installed first
+  # additional inheritance from infrastructure-external-secrets
+  # - namespaces
+  # - repositories
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/secrets/stores
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
