--- a/kubernetes/monitor/splunk/ks.yaml
+++ b/kubernetes/monitor/splunk/ks.yaml
@@ -7,11 +7,13 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: cluster-settings
-    - name: infrastructure-external-secrets-stores
-    - name: infrastructure-ingress-logging
     - name: infrastructure-reloader
     - name: monitor-splunk-operator # deploys splunk crds
+  # additional inheritance from infrastructure-splunk-operator
+  # - cluster-settings
+  # - infrastructure-ingress-logging
+  # - namespaces
+  # - repositories
   interval: 1h0m0s
   path: ./kubernetes/monitor/splunk/app
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
@@ -34,10 +36,11 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: infrastructure-external-secrets-stores
     - name: infrastructure-ingress-logging
-    - name: namespaces
-    - name: repositories
+  # additional inheritance from infrastructure-external-secrets-stores (via infrastructure-ingress-logging)
+  # - cluster-settings
+  # - namespaces
+  # - repositories
   interval: 1h0m0s
   path: ./kubernetes/monitor/splunk/splunk-operator
   prune: true
