--- a/kubernetes/monitor/prometheus/app/secrets.yaml
+++ b/kubernetes/monitor/prometheus/app/secrets.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -18,3 +19,34 @@ spec:
     - secretKey: admin-password
       remoteRef:
         key: grafana-admin-password
+---
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: prometheus-thanos-blob-creds
+  namespace: monitor
+spec:
+  refreshInterval: 24h
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: azure-keyvault
+  target:
+    name: prometheus-thanos-blob-creds
+    creationPolicy: Owner
+    template:
+      engineVersion: v2
+      data:
+        thanos.yaml: |
+          type: AZURE
+          config:
+            storage_account: "{{ .storage_account_name }}"
+            storage_account_key: "{{ .storage_account_key }}"
+            container: "prometheus"
+  data:
+    - secretKey: storage_account_name
+      remoteRef:
+        key: prometheus-blob-storage-account
+    - secretKey: storage_account_key
+      remoteRef:
+        key: prometheus-blob-account-key
