feat(splunk): standardise to use account-key secret

--- a/kubernetes/monitor/splunk/app/secrets.yaml
+++ b/kubernetes/monitor/splunk/app/secrets.yaml
@@ -18,7 +18,7 @@ spec:
         key: splunk-blob-storage-account
     - secretKey: azure_sa_secret_key
       remoteRef:
-        key: splunk-blob-storage-secret
+        key: splunk-blob-account-key
 ---
 # yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
