--- a/requirements-dev-frozen.txt
+++ b/requirements-dev-frozen.txt
@@ -2,29 +2,30 @@ aiodns==3.0.0
 aiohttp==3.8.5
 aiomultiprocess==0.9.0
 aiosignal==1.3.1
-ansible-compat==4.1.5
-ansible-core==2.15.2
+ansible-compat==4.1.6
+ansible-core==2.15.3
 ansible-lint==6.17.2
 argcomplete==3.1.1
-async-timeout==4.0.2
+async-timeout==4.0.3
 attrs==23.1.0
 bc-detect-secrets==1.4.30
 bc-jsonpath-ng==1.5.9
 bc-python-hcl2==0.3.51
+beartype==0.15.0
 beautifulsoup4==4.12.2
 black==23.7.0
 boolean.py==4.0
-boto3==1.28.22
-botocore==1.31.22
+boto3==1.28.30
+botocore==1.31.30
 bracex==2.3.post1
 cached-property==1.5.2
 cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
-cfgv==3.3.1
+cfgv==3.4.0
 charset-normalizer==3.2.0
-checkov==2.3.360
-click==8.1.6
+checkov==2.4.3
+click==8.1.7
 click-option-group==0.5.6
 cloudsplaining==0.5.2
 colorama==0.4.6
@@ -46,7 +47,6 @@ identify==2.5.26
 idna==3.4
 igraph==0.10.6
 importlib-metadata==6.8.0
-importlib-resources==5.0.7
 isodate==0.6.1
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -54,7 +54,7 @@ jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
 junit-xml==1.9
 lark==1.1.7
-license-expression==30.1.0
+license-expression==30.1.1
 Markdown==3.4.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
@@ -70,8 +70,8 @@ pathspec==0.11.2
 pip==23.2.1
 platformdirs==3.10.0
 ply==3.11
-policy-sentry==0.12.7
-policyuniverse==1.5.1.20230725
+policy-sentry==0.12.8
+policyuniverse==1.5.1.20230817
 pre-commit==3.3.3
 pre-commit-hooks==4.4.0
 prettytable==3.8.0
@@ -80,8 +80,6 @@ pycep-parser==0.4.1
 pycparser==2.21
 Pygments==2.16.1
 pyparsing==3.1.1
-pyston==2.3.5
-pyston-autoload==2.3.5
 python-dateutil==2.8.2
 PyYAML==6.0.1
 rdflib==7.0.0
@@ -93,7 +91,7 @@ rich==13.5.2
 rpds-py==0.9.2
 ruamel.yaml==0.17.32
 ruamel.yaml.clib==0.2.7
-s3transfer==0.6.1
+s3transfer==0.6.2
 schema==0.7.5
 semantic-version==2.10.0
 setuptools==68.0.0
@@ -101,20 +99,19 @@ six==1.16.0
 smmap==5.0.0
 sortedcontainers==2.4.0
 soupsieve==2.4.1
-spdx-tools==0.7.1
+spdx-tools==0.8.0
 subprocess-tee==0.4.1
 tabulate==0.9.0
 termcolor==2.3.0
 texttable==1.6.7
 toml==0.10.2
-tomli==2.0.1
-tqdm==4.65.2
+tqdm==4.66.1
 typing_extensions==4.7.1
 unidiff==0.7.5
 update-checker==0.18.0
 uritools==4.0.1
 urllib3==1.26.16
-virtualenv==20.24.2
+virtualenv==20.24.3
 wcmatch==8.4.1
 wcwidth==0.2.6
 websocket-client==1.6.1
