--- a/kubernetes/monitor/prometheus/ks.yaml
+++ b/kubernetes/monitor/prometheus/ks.yaml
@@ -25,3 +25,25 @@ spec:
     kind: GitRepository
     name: flux-system
   timeout: 5m0s
+---
+# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: monitor-prometheus-podmonitor
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: monitor-prometheus
+  # additional inheritance from monitor-prometheus
+  # - infrastructure-external-secrets-stores
+  # - infrastructure-ingress-logging
+  # - namespaces
+  # - repositories
+  interval: 1h0m0s
+  path: ./kubernetes/monitor/prometheus/podmonitor
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  timeout: 5m0s
