fix(prometheus): flux cluster dashboard not showing metrics

--- a/kubernetes/monitor/prometheus/app/kustomization.yaml
+++ b/kubernetes/monitor/prometheus/app/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - secrets.yaml
   - helm-release.yaml
+# following is special flux config as taken from https://github.com/fluxcd/flux2-monitoring-example/tree/main
 configMapGenerator:
   - name: flux-kube-state-metrics-config
     files:
