--- a/kubernetes/monitor/prometheus/app/helm-release.yaml
+++ b/kubernetes/monitor/prometheus/app/helm-release.yaml
@@ -25,6 +25,8 @@ spec:
       retries: 3
   uninstall:
     keepHistory: false
+  # special flux config as taken from https://github.com/fluxcd/flux2-monitoring-example/tree/main
+  # kept in seperate ConfigMap due to it's size
   valuesFrom:
     - kind: ConfigMap
       name: flux-kube-state-metrics-config
@@ -114,6 +116,7 @@ spec:
             etcd:
               enabled: true
 
+    # flux monitoring config will add to rbac and crd fields
     kube-state-metrics:
       enabled: true
       metricLabelsAllowlist:
@@ -189,9 +192,6 @@ spec:
           - action: keep
             sourceLabels: ["__name__"]
             regex: "(apiserver_audit|apiserver_client|apiserver_delegated|apiserver_envelope|apiserver_storage|apiserver_webhooks|authenticated_user|authentication|disabled_metric|go|hidden_metric|kubernetes_build|kubernetes_feature|leader_election|process_cpu|process_max|process_open|process_resident|process_start|process_virtual|registered_metric|rest_client|scheduler|scrape_duration|scrape_samples|scrape_series|workqueue)_(.+)"
-
-    kubeStateMetrics:
-      enabled: false
 
     prometheus:
       thanosService:
