--- a/kubernetes/monitor/prometheus/app/kube-state-metrics-config.yaml
+++ b/kubernetes/monitor/prometheus/app/kube-state-metrics-config.yaml
@@ -1,7 +1,9 @@
 kube-state-metrics:
-  collectors: [ ]
+# flux config from https://github.com/fluxcd/flux2-monitoring-example/tree/main blocks getting normal metrics. Config tweaked to allow custom and normal metrics
+#  collectors: [ ] - overwrites collectors in https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
   extraArgs:
-    - --custom-resource-state-only=true
+    - --custom-resource-state-only=false # when set to true only customResourceState resources will be taken into account
+    # https://github.com/kubernetes/kube-state-metrics/blob/main/docs/customresourcestate-metrics.md
   rbac:
     extraRules:
       - apiGroups:
