feat(prometheus): add longhorn storage monitoring

--- a/kubernetes/infrastructure/longhorn/config/kustomization.yaml
+++ b/kubernetes/infrastructure/longhorn/config/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - longhorn-backups.yaml
   - longhorn-default-settings.yaml
+  - longhorn-servicemonitor.yaml
   - longhorn-snapshot.yaml
   - longhorn-snapshot-class.yaml
   - secret.yaml
